add main index.html

--- a/100_day_javascript/DAY6_MUSIC_PLAYER/index.html
+++ b/100_day_javascript/DAY6_MUSIC_PLAYER/index.html
@@ -26,7 +26,7 @@
   Lesfm
   -->
   <div class="author-info">
-    Coded by <a href="#">Hamza Hdili</a> | Challenge by
+    Coded by <a href="https://github.com/hamzahdili2001" target="_blank">Hamza Hdili</a> | Challenge by
     <a href="https://www.devchallenges.io?ref=challenge" target="_blank">devChallenges.io</a>.
   </div>
 
