add flip the coin

--- a/100_day_javascript/DAY6_MUSIC_PLAYER/index.html
+++ b/100_day_javascript/DAY6_MUSIC_PLAYER/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" role="main">
 
 <head>
   <meta charset="UTF-8" />
@@ -32,7 +32,7 @@
 
   <div class="card">
     <div class="cover">
-      <img id="cover" src="/resources/cover-1.jpg" alt="Song Cover" />
+      <img id="cover" src="./resources/cover-1.jpg" alt="Song Cover" />
     </div>
 
     <h2 id="title"></h2>
@@ -50,9 +50,10 @@
     </div>
 
     <div class="controls">
-      <button class="icon" id="next"><img src="/resources/Stop_and_play_fill-1.svg" alt=""></button>
-      <button class="play" id="play"><img src="/resources/Play_fill.svg" alt=""></button>
-      <button class="icon" id="prev"><img src="/resources/Stop_and_play_fill_reverse.svg" alt=""></button>
+      <button class="icon" id="next" aria-label="next"><img src="./resources/Stop_and_play_fill-1.svg" alt=""></button>
+      <button class="play" id="play" aria-label="Play"><img src="./resources/Play_fill.svg" alt=""></button>
+      <button class="icon" id="prev" aria-label="previous"><img src="./resources/Stop_and_play_fill_reverse.svg"
+          alt=""></button>
     </div>
   </div>
 
