add random quotes logic

--- a/100_day_javascript/DAY8_RANDOM_QUOTE/index.html
+++ b/100_day_javascript/DAY8_RANDOM_QUOTE/index.html
@@ -26,18 +26,17 @@
   <div class="quote-container">
     <h1 class="author">George Bernard Shaw</h1>
     <div class="tags">
-      <span>Famous Quotes</span>
-      <span>inspirational</span>
+
     </div>
-    <p class="quate-paragraph">"Learn form yesterday, live for today, hope for tomorrow"</p>
+    <p class="quote-paragraph">"Learn form yesterday, live for today, hope for tomorrow"</p>
   </div>
 
   <div class="button-container">
-    <button>
+    <button id="random">
       Random
       <img src="./resources/regroup.svg" alt="">
     </button>
-    <button>
+    <button id="share">
       Share
       <img src="./resources/link.svg" alt="">
     </button>
