--- a/100_day_javascript/Dashboard_vanillajs/chakra/pages/login.html
+++ b/100_day_javascript/Dashboard_vanillajs/chakra/pages/login.html
@@ -58,7 +58,7 @@
                 <form action="">
                     <div class="input-group">
                         <label for="email">Email</label>
-                        <input type="email" id="email" placeholder="Enter your email">
+                        <input type="text" id="email" placeholder="Enter your email">
                     </div>
                     <div class="input-group">
                         <label for="password">Password</label>
@@ -76,8 +76,12 @@
             <div class="banner-container">
                 <img src="/assets/svg/login-hero.svg" alt="hero image">
             </div>
+
+            <div class="message" id="message">
+            </div>
         </main>
     </div>
+    <script defer type="module" src="../sctipts/main.js"></script>
 </body>
 
 </html>
