--- a/100_day_javascript/DAY8_RANDOM_QUOTE/index.html
+++ b/100_day_javascript/DAY8_RANDOM_QUOTE/index.html
@@ -4,52 +4,56 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Generate and share random inspirational quotes with tags and author names." />
+  <meta name="robots" content="index,follow" />
+  <meta property="og:title" content="Random Quote Generator" />
+  <meta property="og:description" content="Generate and share random inspirational quotes." />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Random Quote Generator" />
+  <meta name="twitter:description" content="Generate and share random inspirational quotes." />
 
   <link rel="icon" href="resources/favicon.ico" type="image/x-icon" sizes="96x96" />
   <link href="https://fonts.googleapis.com/css?family=Outfit:100,200,300,regular,500,600,700,800,900"
     rel="stylesheet" />
   <link rel="stylesheet" href="style.css">
 
-  <title>Random Quote | devChallenges.io</title>
+  <title>Random Quote Generator</title>
 
 </head>
 
+<body>
+  <main class="container">
 
-<!-- 
+    <section class="quote-container" aria-live="polite" aria-atomic="true">
+      <p class="author" id="quote-author">George Bernard Shaw</p>
+      <div class="tags" aria-label="Quote tags">
 
-  Random
+      </div>
+      <blockquote class="quote-paragraph" id="quote-text">"Learn from yesterday, live for today, hope for tomorrow."
+      </blockquote>
+    </section>
 
-  Share
-  
-  -->
-<div class="container">
-  <div class="quote-container">
-    <h1 class="author">George Bernard Shaw</h1>
-    <div class="tags">
-
+    <div class="button-container">
+      <button id="random" type="button" aria-describedby="quote-text">
+        Random
+        <img src="./resources/regroup.svg" alt="" aria-hidden="true">
+      </button>
+      <button id="share" type="button" aria-describedby="quote-text">
+        Share
+        <img src="./resources/link.svg" alt="" aria-hidden="true">
+      </button>
     </div>
-    <p class="quote-paragraph">"Learn form yesterday, live for today, hope for tomorrow"</p>
+
+    <p class="sr-only" id="status" aria-live="polite"></p>
+  </main>
+
+  <div class="author-info">
+    Coded by <a href="https://github.com/hamzahdili2001">Hamza Hdili</a> | Challenge by
+    <a href="https://www.devchallenges.io?ref=challenge" target="_blank" rel="noopener noreferrer">devChallenges.io</a>.
   </div>
 
-  <div class="button-container">
-    <button id="random">
-      Random
-      <img src="./resources/regroup.svg" alt="">
-    </button>
-    <button id="share">
-      Share
-      <img src="./resources/link.svg" alt="">
-    </button>
-  </div>
-</div>
-
-
-<div class="author-info">
-  Coded by <a href="https://github.com/hamzahdili2001">Hamza Hdili</a> | Challenge by
-  <a href="https://www.devchallenges.io?ref=challenge" target="_blank">devChallenges.io</a>.
-</div>
-
-<script src="./script.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
